# antidote.medicalaesthetic

./: .ebignore  .env.example  .replit  AI_RECOMMENDATIONS_DEBUG_LOG.md  ANTIDOTE_PRODUCTION_PERFORMANCE_GUIDE.md  DEPLOYMENT_GUIDE.md  Dockerfile  PACKAGE_DISPLAY_UPDATES.md  PERFORMANCE_ANALYSIS_REPORT.md  PERFORMANCE_IMPROVEMENT_RESULTS.md  PRODUCTION_FIX_GUIDE.md  Procfile  SEO_TESTING_GUIDE.md  add_mobile_image_column.py  add_packages_from_csv.py  add_simple_packages.py  add_test_data.sql  add_test_data_updated.sql  admin_access_helper.py  admin_clinic_routes.py  admin_credit_system.py  admin_dashboard_debug.py  admin_procedure_debug.py  admin_transaction_history.py  advanced_cache.py  advanced_image_solution.py  advanced_performance_system.py  advanced_seo_routes.py  ahmedabad_clinics.csv  ai_recommendations_clean.py  ai_utils.py  analyze_import_discrepancy.py  antidote_app_backup.py  api_routes.py  app.json  app.py  application.py  auto_categorization.py  auto_production_optimizer.py  automate_imports.py  (+570 more)
.do/: app.yaml
.ebextensions/: 01_python.config  02_nginx.config  03_database.config  04_environment.config  05_performance.config
attached_assets/: Pasted--Review-and-configure-resource-settings-Git-repository-details-Change-repository-Service-provider-Gi-1757124780023_1757124780026.txt  Pasted-MT-Avatar-Back-to-Apps-antidote-medical-first-project-BLR1-Add-resources-Actions-antidote-plastics-1757125165642_1757125165642.txt  Pasted-MT-Avatar-Back-to-Apps-antidote-test-first-project-BLR1-Add-resources-Actions-antidote-plasticsurg-1757125892190_1757125892191.txt
(+922 files in other folders)
